--- a/backend/3.1+Express+Server/3.1 Express Server/package.json
+++ b/backend/3.1+Express+Server/3.1 Express Server/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "3.2-http-requests",
+  "name": "3.1-express-server",
   "version": "1.0.0",
   "description": "",
+  "license": "ISC",
+  "author": "iyke",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
   "dependencies": {
     "express": "^5.2.1"
   }
