--- a/backend/3.5+Secrets+Project/3.5 Secrets Project/package.json
+++ b/backend/3.5+Secrets+Project/3.5 Secrets Project/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "3.2-http-requests",
+  "name": "3.5-joke-maker-project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "express": "^5.2.1"
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
   }
 }
