--- a/backend/4.0+EJS/4.0 EJS/package.json
+++ b/backend/4.0+EJS/4.0 EJS/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "3.2-http-requests",
+  "name": "4.0-ejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
+    "ejs": "^4.0.1",
     "express": "^5.2.1"
   }
 }
