--- a/backend/4.4+Band+Generator+Project/4.4 Band Generator Project/package.json
+++ b/backend/4.4+Band+Generator+Project/4.4 Band Generator Project/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "3.2-http-requests",
+  "name": "4.0-ejs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "express": "^5.2.1"
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2"
   }
 }
